<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAvatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:transitionName="imageTransition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivAvatar"
                app:layout_constraintTop_toTopOf="@id/ivAvatar"
                app:srcCompat="@drawable/ic_baseline_assignment_ind_24"
                tools:text="UserName" />

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

            <TextView
                android:id="@+id/tvRepoName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line"
                tools:text="RepoName" />

            <TextView
                android:id="@+id/tvStarsLabel"
                style="@style/DetailsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/repo_details_stars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRepoName" />

            <TextView
                android:id="@+id/tvStars"
                style="@style/DetailsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toEndOf="@id/tvStarsLabel"
                app:layout_constraintTop_toBottomOf="@id/tvRepoName"
                tools:text="3" />

            <TextView
                android:id="@+id/tvLanguageLabel"
                style="@style/DetailsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/repo_details_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvStarsLabel" />

            <TextView
                android:id="@+id/tvLanguage"
                style="@style/DetailsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLanguageLabel"
                app:layout_constraintTop_toBottomOf="@id/tvStars"
                tools:text="Kotlin" />

            <TextView
                android:id="@+id/tvCreatedLabel"
                style="@style/DetailsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/repo_details_created"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLanguageLabel" />

            <TextView
                android:id="@+id/tvCreated"
                style="@style/DetailsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toEndOf="@id/tvCreatedLabel"
                app:layout_constraintTop_toBottomOf="@id/tvLanguage"
                tools:text="01.01.1980" />

            <TextView
                android:id="@+id/tvForkLabel"
                style="@style/DetailsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/repo_details_fork"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCreatedLabel" />

            <TextView
                android:id="@+id/tvFork"
                style="@style/DetailsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toEndOf="@id/tvForkLabel"
                app:layout_constraintTop_toBottomOf="@id/tvCreated"
                tools:text="Нет" />

            <TextView
                android:id="@+id/tvArchivedLabel"
                style="@style/DetailsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/repo_details_archived"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForkLabel" />

            <TextView
                android:id="@+id/tvArchived"
                style="@style/DetailsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toEndOf="@id/tvArchivedLabel"
                app:layout_constraintTop_toBottomOf="@id/tvFork"
                tools:text="Нет" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/DetailsField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvArchivedLabel"
                tools:text="Описание" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
